# moos-ivp-xeqtor

./: .gitignore
missions/alder/: alder_lab3.bhv  alder_lab3.moos
missions/pireas_v1/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/pireas_v2/: FIELD_OPS.txt  clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/skara2/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos  skaramangas.info
missions/skara3/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/skara3_1/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  make_chart.py  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/skara3_2/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/skaramangas/: clean.sh  launch.sh  skara.bhv  skara.moos  skaramangas.tif
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt
src/pArrivalSync/: ArrivalSync.cpp  ArrivalSync.h  ArrivalSync_Info.cpp  ArrivalSync_Info.h  CMakeLists.txt  main.cpp
src/pGenPath/: GenPath.h  (+5 more)
(+57 files in other folders)
